fix apikey modal overflow

--- a/projects/laji/src/app/shared-modules/download-modal/apikey-modal/apikey-modal.component.scss
+++ b/projects/laji/src/app/shared-modules/download-modal/apikey-modal/apikey-modal.component.scss
@@ -11,6 +11,10 @@
 .copy-to-clipboard {
 	cursor: pointer;
 	color: $primary-5;
+	overflow-x: hidden;
+	padding-left: 1px;
+	padding-right: 1px;
+	white-space: nowrap;
 	&:hover {
 		color: $primary-6;
 		text-decoration: underline;
